Clean up broken external links.

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -101,14 +101,9 @@ you will need the latest DDK from <a target="_blank" href=
 "http://www.dscaler.org/devdocs/index.html">Auto Generated Code
 Documentation</a></p>
 
-<p>Mark Rejhon's <a href="32Spec.htm">3:2 Pulldown Algorithm
-specification</a>. This forms the basis for the 3:2 pulldown
-detection routine currently in DScaler.</p>
-
-<p>A <a target="_blank" href=
-"http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter from
-Video Demystified</a> dealing with the PAL, NTSC, and SECAM
-standards as well as Teletext and Closed-Captioning.</p>
+      <p>Mark Rejhon's <a href="32Spec.htm">3:2 Pulldown Algorithm specification</a>. 
+        This forms the basis for the 3:2 pulldown detection routine currently 
+        in DScaler.</p>
 
 <p><a target="_blank" href=
 "http://www.dscaler.org/Help/index.php?helppage=Standards.htm">Project
@@ -226,57 +221,33 @@ page</a></p>
 <p><a target="_blank" href=
 "http://sourceforge.net/mail/?group_id=7420">Mailing List</a></p>
 
-<p><a target="_blank" href=
-"http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse
-CVS Repository</a></p>
-
-<p><a target="_blank" href=
-"http://www.dscaler.org/downloads/dscalermodule.zip">Application
-Source Zip</a></p>
-
-<p><a target="_blank" href=
-"http://www.dscaler.org/downloads/directshowmodule.zip">Test
-Deinterlace DirectShow Module Source Zip</a></p>
-
-<h2>Deinterlace Project Developer Resources</h2>
-
-<p>John Adcock's <a target="_blank" href=
-"http://www.dscaler.org/palmovie/index.htm">PALMovie deinterlace
-plugin</a> for bTV.</p>
-
-<p>An explanation of the <a href="IniFile.HTM">options
-available</a> in the DScaler.ini file.</p>
-
-<p>Conexant's <a href=
-"http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8
-register tools</a> for Windows 9x.</p>
-
-<h2>BT848 Links</h2>
-
-<p><a target="_blank" href=
-"http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">
-BT878a page at Conexant</a></p>
-
-<p><a target="_blank" href=
-"http://me.in-berlin.de/~kraxel/bttv.html">bttv - Linux
-Driver</a> - Without this none of this would have been
-possible</p>
-
-<p><a target="_blank" href=
-"http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD bt848</a>
-Driver Project</p>
-
-<h2>Sound Links</h2>
-
-<p>This <a target="_blank" href=
-"ftp://telepresence.dmem.strath.ac.uk/pub/bt848/spec/">FTP
-site</a> contains documents on the MSP sound chips and Phillips
-and Temic tuners that would be useful for anyone looking to
-improve these areas. I only recently found this site and have had
-a quick look and found that most of the information you need
-should be buried in this lot.</p>
-
-<!-- #EndEditable --></td>
+      <p><a target="_blank" href=
+"http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse CVS Repository</a></p>
+      <h2>Deinterlace Project Developer Resources</h2>
+      <p>John Adcock's <a target="_blank" href=
+"http://www.dscaler.org/palmovie/index.htm">PALMovie deinterlace plugin</a> for 
+        bTV.</p>
+      <p>An explanation of the <a href="IniFile.HTM">options available</a> in 
+        the DScaler.ini file.</p>
+      <p>Conexant's <a href=
+"http://www.dscaler.org/distributions/btregtools.zip">Bt 8x8 register tools</a> 
+        for Windows 9x.</p>
+      <h2>BT848 Links</h2>
+      <p><a target="_blank" href=
+"http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227"> 
+        </a><a target="_blank" href=
+"http://me.in-berlin.de/~kraxel/bttv.html">bttv - Linux Driver</a> - Without this 
+        none of this would have been possible</p>
+      <p><a target="_blank" href=
+"http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD bt848</a> Driver Project</p>
+      <h2>Sound Links</h2>
+      <p>This <a target="_blank" href=
+"ftp://telepresence.dmem.strath.ac.uk/pub/bt848/spec/">FTP site</a> contains documents 
+        on the MSP sound chips and Phillips and Temic tuners that would be useful 
+        for anyone looking to improve these areas. I only recently found this 
+        site and have had a quick look and found that most of the information 
+        you need should be buried in this lot.</p>
+      <!-- #EndEditable --></td>
 </tr>
 
 <tr>
@@ -322,7 +293,7 @@ href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
 
 <p> </p>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
