Finally corrected Russkii language selector per P. Gubanov

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -36,17 +36,12 @@ height="1"></td>
 <tr>
 <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg"
 alt="DScaler logo"></td>
-<td colspan="2" align="right" valign="top">
-<!-- #BeginEditable "Language%20Selector" -->
-<a href="francais/FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a>
-<img src="images/selector-divider.gif" width="10" height="18">
-<a href="russian/FAQ.htm"><img src="images/selector-russian.gif" width="45" height="18" border="0"></a>
-<img src="images/selector-divider.gif" width="10" height="18">
-<a href="portuguese/PortugueseFAQ.htm"><img src="images/selector-portuguese.gif" width="60" height="18" border="0"></a>
-<img src="images/selector-divider.gif" width="10" height="18">
-<img src="images/selector-english.gif" width="45" height="18">
-<!-- #EndEditable -->
-</td>
+    <td colspan="2" align="right" valign="top"> <!-- #BeginEditable "Language%20Selector" --> 
+      <a href="francais/FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a> 
+      <img src="images/selector-divider.gif" width="10" height="18"> <a href="russian/FAQ.htm"><img src="images/selector-russian2.gif" width="55" height="18" border="0"></a> 
+      <img src="images/selector-divider.gif" width="10" height="18"> <a href="portuguese/PortugueseFAQ.htm"><img src="images/selector-portuguese.gif" width="60" height="18" border="0"></a> 
+      <img src="images/selector-divider.gif" width="10" height="18"> <img src="images/selector-english.gif" width="45" height="18"> 
+      <!-- #EndEditable --> </td>
 </tr>
 
 <tr>
