--- a/htdocs/portuguese/PortugueseFAQ.htm
+++ b/htdocs/portuguese/PortugueseFAQ.htm
@@ -36,7 +36,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <tr>
 <td width="160" rowspan="2"><img src="../images/dscalerlogo.jpg"
 alt="DScaler logo"></td>
-<td colspan="2" align="right" valign="top"><font face=
+    <td colspan="2" align="right" valign="top"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
 "1"><!-- #BeginEditable "Language%20Selector" --><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size=
@@ -45,7 +45,7 @@ alt="DScaler logo"></td>
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b><a href=
 "../russian/FAQ.htm"><font size="1"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><img src=
-"../images/selector-russian.gif" width="45" height="18" border=
+"../images/selector-russian2.gif" width="55" height="18" border=
 "0"></font></font></a></b></font></font></b></font></font></b><img
  src="../images/selector-divider.gif" width="10" height=
 "17"><b><font size="1"><font face=
@@ -71,8 +71,7 @@ alt="DScaler logo"></td>
 "../images/selector-divider.gif" width="10" height=
 "17"></font></font></b></font></font></b><img src=
 "../images/selector-portuguese.gif" width="60" height="18"
-border="0"></font></font></b></font></font></b></font>
-<!-- #EndEditable --></font></b></font></td>
+border="0"></font></font></b></font></font></b></font> <!-- #EndEditable --></font></b></font></td>
 </tr>
 
 <tr>
@@ -578,7 +577,7 @@ poder arrancar est&atilde;o na <a href=
 "http://deinterlace.sourceforge.net/developers.htm">p&aacute;gina
 de programadores</a>.</p>
 
-<p><!-- #EndEditable --></p>
+<p><!-- #EndEditable --><p></p>
 </td>
 </tr>
 
@@ -622,7 +621,7 @@ href="../keyboard.htm" class="bottommenu">keyboard shortcuts</a>
 "http://sourceforge.net/sflogo.php?group_id=7420&type=1" border=
 "0" alt="SourceForge.net" align="right"></a></p>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
