--- a/htdocs/screenshots/Gladiator_Screenshots.htm
+++ b/htdocs/screenshots/Gladiator_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>DScaler - Additional Screenshots</title>
+<title>DScaler - Gladiator SDI Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,9 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dscalerlogo.jpg" alt="DScaler logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
-      DScaler Screenshot Library&nbsp;<!-- #EndEditable --></b></font></td>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
+      Gladiator (SDI) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -41,44 +40,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Below, you will find additional screenshots organized by source. After 
-        viewing these shots, we are confident that you will see for yourself the 
-        clear benefits of deinterlacing using DScaler through your 400 MHz Windows 
-        PC and a $50 capture card.</p>
-      <p>Thanks to all who have contributed to this screenshot library.</p>
-      <h2><br>
-        A/B Deinterlacing Screen Capture Comparisons</h2>
-      <p>Laserdisc -- <a href="IQ_screenshots.htm">IQ</a><br>
-        VHS -- <a href="index.htm">Titanic</a></p>
-      <h2><br>
-        Additional Screenshots By Source</h2>
-      <p>DVD - S-video (analog)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime)</p>
-      <p>DVD - SDI (digital)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Gladiator_Screenshots.htm">Gladiator</a> 
-        (Drama)<br>
+      <h2>Gladiator</h2>
+      <p>Below are two screenshots provided by Dan Schmelzer from Gladiator through 
+        an SDI DVD player and SDI input card.<br>
       </p>
-      <p>HDTV<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="HD_Screenshots.htm">Various Screenshots</a> 
-        (Downconverted from 1080i)</p>
-      <p>Laserdisc<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="IQ_screenshots.htm">IQ</a> (Drama, 
-        Comedy)</p>
-      <p> Playstation 2<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime; DVD through Playstation 2)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dead_Or_Alive_2_Screenshots.htm">Dead 
-        or Alive 2</a> (Video Game)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dynasty_Warrior_2_Screenshots.htm">Dynasty 
-        Warrior 2</a> (Video Game)</p>
-      <p>Satellite (Canal)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Sports_News_Screenshots.htm">Sports 
-        News</a> (PAL S-Video)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Talk_Show_Screenshots.htm">Talk 
-        Show</a> (PAL Composite)</p>
-      <p> VHS<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.htm">Titanic</a> (Drama) 
+      <p><b>Title</b>: Gladiator<br>
+        <b>Source</b>: Electrograph SDI2000 DVD Player <br>
+        <b>Connection</b>: SDI<br>
+        <b>Capture/Tuner Card</b>: SDI Silk 100</p>
+      <p>Note: these images are captured in the anamorphic format output by the 
+        DVD player. Using DScaler's aspect<br>
+        ratio controls, the displayed aspect ratio will be the film Original Aspect 
+        Ratio of 2.35:1.</p>
+      <p>Thanks to Dan for showing direct digital input using DScaler!</p>
+      <p>Rome Greets Her New Emporer<br>
+        <img src="Gladiator_Rome_Greets.jpg" width="720" height="480"> </p>
+      <p><br>
+        Such Splended Mistresses...<br>
+        <img src="Gladiator_Splended_Mistresses.jpg" width="720" height="480"> 
       </p>
       <!-- #EndEditable --></td>
   </tr>
