Card addition; another round of additions expected after next release

--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -399,7 +399,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <p> 
-            <blockquote>Guillemot maxi video 3</blockquote>
+            <blockquote>Guillemot Maxi Video 3</blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -913,6 +913,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
+            <p>SDI Silk 100</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">
+            <p><a href="SDI_Silk_100_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
             <p>Sigma TVII-FM</p>
           </td>
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
@@ -950,8 +965,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
-        <tr>
-          <td valign="middle" align="left">
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>STB PCI TV (FM)</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
