--- a/htdocs/card-support/SDI_Silk_100_Notes.htm
+++ b/htdocs/card-support/SDI_Silk_100_Notes.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>DScaler - Zoltrix-Max Notes</title>
+<title>DScaler - SDI Silk Notes</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
