Addition of digital input as possible source.

--- a/htdocs/about.htm
+++ b/htdocs/about.htm
@@ -40,16 +40,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p> TV is a piece of software that grabs analog, interlaced video, and 
-        deinterlace it to make it a progressive scan feed for use on your computer 
-        monitor or projector.<p> Analog, interlaced video is what output devices like
-      VCRs, Laserdiscs, 
-        game consoles, DVD players output
+      <p> TV is a piece of software that grabs analog or digital, interlaced video, 
+        and deinterlaces it to make it a progressive scan feed for use on your 
+        computer monitor or projector.
+      <p> Analog or digital, interlaced video is what output devices like VCRs, 
+        Laserdiscs, game consoles, DVD players output.
       <p> Unlike most existing software that tries to do the same, DScaler implements 
-        very sophisticated algorithms to deinterlace such sources. Using such 
-        algorithms makes sure that each kind of video source is handled a different 
-        way. It provides the user with a level of image quality unknown to PC 
-        owners up to now. 
+        very sophisticated algorithms to deinterlace such sources in real time. 
+        Using such algorithms makes sure that each kind of video source is handled 
+        a different way. It provides the user with a level of image quality unknown 
+        to PC owners up to now. 
       <p> Some of those techniques are ; 
       <ul>
         <li>Video source deinterlacing</li>
@@ -59,7 +59,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       </ul>
       <p> The image quality resulting from those complex operations is high and 
         allows some people equipped with data capable projectors to feed them 
-        with a progressive scan source that was interlaced right before. 
+        with a progressive scan source that was interlaced right before.
       <p>The main forum for user discussion is the Home Theater Computers Section 
         on the <a href="http://www.avsforum.com/avs-vb/">AV Science 
         Forum</a>.</p>
