Fixed typo on anonymous

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -127,19 +127,19 @@ you installed CVS to your path.</p>
 wish to extract the source and type:</p>
 
 <pre>
-cvs -d:pserver:anoymous@cvs.sf.net:/cvsroot/deinterlace login
+cvs -d:pserver:anonymous@cvs.sf.net:/cvsroot/deinterlace login
 </pre>
 
 <p>Then press return when asked for a password, then type</p>
 
 <pre>
-cvs -z3 -d:pserver:anoymous@cvs.sf.net:/cvsroot/deinterlace co DScaler
+cvs -z3 -d:pserver:anonymous@cvs.sf.net:/cvsroot/deinterlace co DScaler
 </pre>
 
 <p>To get the DScaler source tree or</p>
 
 <pre>
-cvs -z3 -d:pserver:anoymous@cvs.sf.net:/cvsroot/deinterlace co Deinterlace
+cvs -z3 -d:pserver:anonymous@cvs.sf.net:/cvsroot/deinterlace co Deinterlace
 </pre>
 
 <p>To get the DirectShow filter tree</p>
